<resources>
    <string name="app_name">HackTheFuture</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">register</string>
    <string name="login">Al een account? Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Strings related to PostSample -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postSample_Name">Name:</string>
    <string name="postSample_Value">Value:</string>
    <string name="postSample_Remark">Remark:</string>
    <string name="postSample_Date">Date:</string>
    <string name="postSample_Button">Add Sample</string>
    <string name="postSample_Researcher">Researcher:</string>
</resources>
